[project]
name = "mtf-dqe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "nbconvert[webpdf]>=7.16.6",
    "numpy>=2.2.4",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
