[project]
name = "mtf-dqe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipytest>=0.14.2",
    "jupyterlab>=4.4.0",
    "jupyterlab-extensions>=0.0.1",
    "matplotlib>=3.10.1",
    "nbconvert[webpdf]>=7.16.6",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
